--- a/app/styles/nav.css
+++ b/app/styles/nav.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:500,300,700,400);
 /*.navbar {
   margin: 0;
 }
@@ -104,6 +103,61 @@
   border: none;
   box-shadow: none;
 }
+
+/* Navbar Dark-w-bg Theme */
+
+.navbar-theme-dark2 {
+  background-color: #2980b9;
+  border-color: transparent;
+}
+.navbar-theme-dark2 .navbar-toggle {
+  border-color: transparent;
+  color: #fff;
+  font-size: 24px;
+  padding: 0;
+}
+.navbar-theme-dark2 .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-brand {
+  color: #fff;
+  background-color: transparent;
+  font-size: 24px;
+  font-weight: 700;
+}
+.navbar-theme-dark2 .navbar-brand:hover, .navbar-theme-dark2 .navbar-brand:focus {
+  color: rgba(255,255,255,0.7);
+}
+.navbar-theme-dark2 .navbar-nav > .active > a {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-nav > .active > a:hover, .navbar-theme-dark2 .navbar-nav > .active > a:focus {
+  color: rgba(255,255,255,0.7);
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-nav > li > a {
+  color: #fff;
+  background-color: transparent;
+  font-weight: 700;
+}
+.navbar-theme-dark2 .navbar-nav > li > a:hover, .navbar-theme-dark2 .navbar-nav > li > a:focus {
+  color: rgba(255,255,255,0.7);
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-nav > .open > a, .navbar-theme-dark2 .navbar-nav > .open > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-nav > .open > a:hover {
+  color: rgba(255,255,255,0.7);
+  background-color: transparent;
+}
+.navbar-theme-dark2 .navbar-collapse, .navbar-theme-dark2 .navbar-form {
+  border: none;
+  box-shadow: none;
+}
+
 
 /* Navbar Light Theme */
 
@@ -222,9 +276,9 @@
   }
 @media (min-width: 768px){
   .navbar {
-    padding: 15px 20px 15px 20px;
+    padding: 10px 0px;
   }
-  
+
 }
 .navbar {
   margin-bottom: 0;
